# timp

./: CMakeLists.txt  readme.md
bos-ddz/: .task1.sh.swp  task1.sh
bos-ddz/bos-rez/: task2-4.sh  task3-9.sh  task4-3.sh  task5-2.sh
example/: example_main.cpp  example_tests.cpp
pz03/: main.cpp  pz03.cpp  pz03.h
pz03/data/: 1-2.txt  1-3.txt  3-2.txt
pz03/data/pz05/: test1.4.txt  test1.5.txt  test2.3.txt  test3.2.txt
pz05/: pz05.cpp  pz05.h
pz06/: main.cpp
task3/: main3.cpp  pz03.txt  task3.cpp
task3/data/: 1-1.txt  1-2.txt  2-1.txt  3-3.txt
